<resources>
    <string name="app_name">Playlist maker</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_uri" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_mail_address">mraikalugin@gmail.com</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_button_description">Очистить строку поиска</string>
    <string name="search_toolbar_description">Заголовок Поиск</string>
    <string name="artwork_description">Изображение обложки</string>
    <string name="open_track_description">Перейти к треку</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="add_to_favorites_description">Добавить в избранное</string>
    <string name="add_to_playlist_description">Добавить в плейлист</string>
    <string name="play_content_description">Воспроизвести</string>
    <string name="no_preview_message">Превью недоступно</string>
    <string name="preview_is_loading_message">Загрузка превью…</string>
    <string name="empty_library_message">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_message">Вы не создали\n ни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="media_player">Медиаплейер</string>
    <string name="page_header">Заголовок</string>
    <string name="add_playlist_image_button">Кнопка добавления изображения плейлиста</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="new_playlist_close_confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_close_confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_close_confirm_dialog_negative">Отмена</string>
    <string name="new_playlist_close_confirm_dialog_positive">Завершить</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="playlist_image_description">Изображние плейлиста</string>
    <string name="add_to_playlist_message">Добавить в плейлист</string>
    <string name="playlist_contains_track_already">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="share_playlist_content_description">Поделиться плейлистом</string>
    <string name="more_actions_playlist_content_description">Больше действий с плейлистом</string>
    <string name="playlist">Плейлист</string>
    <string name="delete_track_dialog_header">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить\nтрек из плейлиста?</string>
    <string name="delete_track_dialog_option_negative">Отмена</string>
    <string name="delete_track_dialog_option_positive">Удалить</string>
    <string name="back_button_description">Вернуться назад</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="track_to_share">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_dialog_header">Удалить плейлист</string>
    <string name="delete">Удалить</string>
    <string name="playlist_updated_message">Плейлист %1$s обновлен</string>
    <string name="save_playlist">Сохранить</string>
    <string name="empty_playlist_message">В этом плейлисте нет треков</string>
    <plurals name="number_of_tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трекa</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="number_of_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>