<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/nightThemeSwitch"
        style="@style/SettingsItemStyle"
        android:text="@string/dark_theme"
        app:thumbTint="@color/thumb_selector"
        app:trackTint="@color/track_selector" />

    <TextView
        android:id="@+id/shareTextView"
        style="@style/SettingsItemStyle"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/supportTextView"
        style="@style/SettingsItemStyle"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/userAgreementTextView"
        style="@style/SettingsItemStyle"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>