<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:contentDescription="@string/search_toolbar_description"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/search"
        app:titleTextColor="?attr/colorOnSecondary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/searchInputEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin_padding"
            android:layout_marginVertical="8dp"
            android:background="@drawable/search_edit_text"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="@dimen/search_edit_padding_vertical"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/search_edit_text_cursor"
            android:textSize="@dimen/view_text_size" />

        <ImageButton
            android:id="@+id/clearSearchButton"
            style="@style/ClearButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/button_margin_padding"
            android:background="@null"
            android:contentDescription="@string/clear_button_description"
            android:padding="@dimen/search_edit_padding_vertical"
            android:src="@drawable/cancel" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResultsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/nothingFoundTextView"
            style="@style/SearchErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nothing_found"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/nothing_found"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/networkErrorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/SearchErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/network_error"
                app:drawableTopCompat="@drawable/network_error" />

            <Button
                android:id="@+id/updateSearchResultsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                app:backgroundTint="?attr/colorSecondaryContainer"
                app:cornerRadius="54dp" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>