<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_main_background"
    android:orientation="vertical"
    android:paddingBottom="12dp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbar_margin_bottom"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/button_margin_padding"
        android:layout_marginBottom="@dimen/button_margin_padding"
        android:layout_weight="1"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/button_text_size"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/dark_text_color" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/button_margin_padding"
        android:layout_marginBottom="@dimen/button_margin_padding"
        android:layout_weight="1"
        android:text="@string/library"
        android:textAllCaps="false"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/button_text_size"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/dark_text_color" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/button_margin_padding"
        android:layout_marginBottom="@dimen/button_margin_padding"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/button_text_size"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/dark_text_color" />

</LinearLayout>