<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:contentDescription="@string/search_toolbar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/audio_player_horizontal_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/audio_player_horizontal_padding" />


    <ImageView
        android:id="@+id/artworkImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/artwork_description"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/trackNameTextView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:src="@drawable/album_placeholder" />

    <TextView
        android:id="@+id/trackNameTextView"
        style="@style/PlayerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/artistNameTextView"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/artworkImageView"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artistNameTextView"
        style="@style/MediumTextSizePlayerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/trackNameTextView"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/audio_player_medium_margin"
        android:background="@null"
        android:contentDescription="@string/play_content_description"
        android:enabled="false"
        android:scaleType="fitCenter"
        android:src="@drawable/play"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
        app:tint="?attr/colorOnSecondary" />

    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/add_to_playlist_description"
        android:scaleType="fitCenter"
        android:src="@drawable/add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/playButton" />

    <ImageButton
        android:id="@+id/addToFavoritesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/add_to_favorites_description"
        android:scaleType="fitCenter"
        android:src="@drawable/add_to_favorites"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="@id/playButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftTrackInfoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/audio_player_track_info_horizontal_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightTrackInfoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/audio_player_track_info_horizontal_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lowerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/currentPositionTextView"
        style="@style/MediumTextSizePlayerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/trackTimeHeaderTextView"
        style="@style/TrackInfoHeaderFieldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBottom_toBottomOf="@id/trackTimeTextView"
        app:layout_constraintStart_toEndOf="@id/leftTrackInfoGuideline"
        app:layout_constraintTag="trackInfoHeaderTag"
        app:layout_constraintTop_toTopOf="@id/trackTimeTextView" />

    <TextView
        android:id="@+id/albumHeaderTextView"
        style="@style/TrackInfoHeaderFieldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toBottomOf="@id/albumTextView"
        app:layout_constraintStart_toEndOf="@id/leftTrackInfoGuideline"
        app:layout_constraintTag="trackInfoHeaderTag"
        app:layout_constraintTop_toTopOf="@id/albumTextView" />

    <TextView
        android:id="@+id/yearHeaderTextView"
        style="@style/TrackInfoHeaderFieldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toBottomOf="@id/yearTextView"
        app:layout_constraintStart_toEndOf="@id/leftTrackInfoGuideline"
        app:layout_constraintTag="trackInfoHeaderTag"
        app:layout_constraintTop_toTopOf="@id/yearTextView" />

    <TextView
        android:id="@+id/genreHeaderTextView"
        style="@style/TrackInfoHeaderFieldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toBottomOf="@id/genreTextView"
        app:layout_constraintStart_toEndOf="@id/leftTrackInfoGuideline"
        app:layout_constraintTag="trackInfoHeaderTag"
        app:layout_constraintTop_toTopOf="@id/genreTextView" />

    <TextView
        android:id="@+id/countryHeaderTextView"
        style="@style/TrackInfoHeaderFieldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/countryTextView"
        app:layout_constraintStart_toEndOf="@id/leftTrackInfoGuideline"
        app:layout_constraintTag="trackInfoHeaderTag"
        app:layout_constraintTop_toTopOf="@id/countryTextView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/trackInfoHeaderBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/audio_player_medium_margin"
        app:constraint_referenced_tags="trackInfoHeaderTag" />

    <TextView
        android:id="@+id/trackTimeTextView"
        style="@style/TrackInfoFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/audio_player_medium_margin"
        android:gravity="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/albumTextView"
        app:layout_constraintEnd_toEndOf="@id/rightTrackInfoGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/trackInfoHeaderBarrier"
        app:layout_constraintTop_toBottomOf="@id/currentPositionTextView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="5:35" />

    <TextView
        android:id="@+id/albumTextView"
        style="@style/TrackInfoFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/yearTextView"
        app:layout_constraintEnd_toEndOf="@id/rightTrackInfoGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/trackInfoHeaderBarrier"
        app:layout_constraintTop_toBottomOf="@id/trackTimeTextView"
        tools:text="Yesterday Yesterday Yesterday Yesterday(Remastered 2009)" />

    <TextView
        android:id="@+id/yearTextView"
        style="@style/TrackInfoFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/genreTextView"
        app:layout_constraintEnd_toEndOf="@id/rightTrackInfoGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/trackInfoHeaderBarrier"
        app:layout_constraintTop_toBottomOf="@id/albumTextView"
        tools:text="1965" />

    <TextView
        android:id="@+id/genreTextView"
        style="@style/TrackInfoFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/countryTextView"
        app:layout_constraintEnd_toEndOf="@id/rightTrackInfoGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/trackInfoHeaderBarrier"
        app:layout_constraintTop_toBottomOf="@id/yearTextView"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryTextView"
        style="@style/TrackInfoFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/lowerGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightTrackInfoGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/trackInfoHeaderBarrier"
        app:layout_constraintTop_toBottomOf="@id/genreTextView"
        tools:text="Великобритания" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/albumFieldGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="albumHeaderTextView, albumTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>